--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
     </section>
 
 <!-- Skripts -->
-<script src="js/jquery-3.4.1.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/jquery.malihu.PageScroll2id.min.js"></script>
 <!-- Подключаем плавных переход по якорям и навигацию -->
         <script>
@@ -1397,7 +1397,7 @@
                 });
             })(jQuery);
         </script>
-<script src="js/jquery.flexslider.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
 <script src="js/script.js"></script>
 
 
