--- a/index.html
+++ b/index.html
@@ -1098,65 +1098,28 @@
                                 <p>Follow Us:</p>
                                 <div class="footer__linkList">
                                     <a class="footer__link" target="_blank" href="https://www.facebook.com/">
-                                        <svg class="scale-up-br" width="7.505" height="16.006"
-                                            viewBox="0 0 7.505 16.006">
-                                            <path id="facebook"
-                                                d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z"
-                                                transform="translate(-447.504 -9776.01)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/facebook-f-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://twitter.com/">
-                                        <svg class="scale-up-br" width="16" height="12.987" viewBox="0 0 16 12.987">
-                                            <path id="twitter"
-                                                d="M483.883,9777.516a3.375,3.375,0,0,1,2.595,1.03,5.325,5.325,0,0,0,1.682-.567l.408-.224a3.28,3.28,0,0,1-1.065,1.541,1.562,1.562,0,0,1-.36.256v.008a6.156,6.156,0,0,0,1.858-.5v.008a5.286,5.286,0,0,1-1.113,1.277l-.513.407a9.4,9.4,0,0,1-.152,2.107,9.176,9.176,0,0,1-6.43,7.258,9.815,9.815,0,0,1-4.645.191,11.972,11.972,0,0,1-1.93-.63,7.792,7.792,0,0,1-.929-.479l-.288-.176a5.352,5.352,0,0,0,1.049.04c.323-.052.639-.038.937-.1a6.706,6.706,0,0,0,1.97-.711,3.66,3.66,0,0,0,.889-.582,2.8,2.8,0,0,1-.977-.176,3.3,3.3,0,0,1-2.082-2.1c.322.035,1.249.119,1.466-.063a2.4,2.4,0,0,1-1.073-.432,3.158,3.158,0,0,1-1.546-2.811l.336.16a3.637,3.637,0,0,0,.689.192,1,1,0,0,0,.448.039h-.016c-.165-.192-.435-.32-.6-.526a3.355,3.355,0,0,1-.737-2.979,3.84,3.84,0,0,1,.352-.854l.016.009a2.019,2.019,0,0,0,.3.343,6,6,0,0,0,.977.934,9.671,9.671,0,0,0,4.012,1.941,6.327,6.327,0,0,0,1.473.19,3.047,3.047,0,0,1,.016-1.54,3.235,3.235,0,0,1,1.858-2.2,3.957,3.957,0,0,1,.729-.224Z"
-                                                transform="translate(-473 -9777.515)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/twitter-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://www.instagram.com/">
-                                        <svg class="scale-up-br" width="16" height="16" viewBox="0 0 16 16">
-                                            <path id="instagram"
-                                                d="M517,9792.015H505a2,2,0,0,1-2-2v-12a2,2,0,0,1,2-2h12a2,2,0,0,1,2,2v12A2,2,0,0,1,517,9792.015Zm-6-11.1a3.1,3.1,0,0,0-2.811,1.8h0c-.005.012-.009.023-.014.034-.029.065-.055.133-.08.2-.012.032-.025.063-.036.1-.023.069-.042.141-.059.212-.009.033-.018.066-.026.1-.016.076-.027.153-.038.23,0,.031-.011.062-.014.094a3.1,3.1,0,1,0,6.163,0c0-.032-.01-.062-.014-.094-.011-.077-.022-.154-.038-.23-.007-.033-.017-.066-.026-.1-.018-.071-.037-.143-.06-.212-.011-.034-.024-.065-.036-.1-.025-.068-.051-.136-.081-.2,0-.011-.008-.022-.014-.034h0A3.1,3.1,0,0,0,511,9780.915Zm6.2-2.3a.8.8,0,0,0-.8-.8h-1.6a.8.8,0,0,0-.8.8v1.6a.8.8,0,0,0,.8.8h1.6a.8.8,0,0,0,.8-.8Zm0,4.1h-1.475a4.9,4.9,0,1,1-9.451,0H504.8v6.7a.8.8,0,0,0,.8.8h10.8a.8.8,0,0,0,.8-.8Z"
-                                                transform="translate(-503 -9776.015)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/instagram-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://www.pinterest.com/">
-                                        <svg class="scale-up-br" width="12.246" height="16.036"
-                                            viewBox="0 0 12.246 16.036">
-                                            <path id="pinterest"
-                                                d="M539.844,9786.424c-.131.521-.262,1.066-.4,1.6a12.228,12.228,0,0,1-.448,1.543,7.906,7.906,0,0,1-1.277,2.2c-.359.417-.283.25-.391.228-.083-.017-.09-.1-.106-.215a12.043,12.043,0,0,1,0-2.087,11.278,11.278,0,0,1,.368-2.17c.3-1.29.592-2.554.9-3.852.02-.087.075-.229.056-.278a4.014,4.014,0,0,1-.268-1.062,3.383,3.383,0,0,1,.087-1.215,2,2,0,0,1,1.184-1.461,1.352,1.352,0,0,1,1.084.082,1.179,1.179,0,0,1,.542.777,2.806,2.806,0,0,1-.05,1.183c-.167.762-.386,1.334-.586,2.068a2.276,2.276,0,0,0-.118,1.133,1.315,1.315,0,0,0,.53.8,1.546,1.546,0,0,0,1.015.285,2.221,2.221,0,0,0,1.657-.98,5.8,5.8,0,0,0,1.047-2.93,7.2,7.2,0,0,0,.044-1.259,3.424,3.424,0,0,0-.7-1.947,3.3,3.3,0,0,0-1.57-1.069,5.213,5.213,0,0,0-2.343-.146,4.147,4.147,0,0,0-3.071,2.208,4.422,4.422,0,0,0-.523,2.131,2.765,2.765,0,0,0,.424,1.563c.083.126.205.229.287.374.115.2-.018.507-.075.727-.069.266-.076.633-.386.64a.942.942,0,0,1-.4-.152,3.2,3.2,0,0,1-1.514-2.334,5.587,5.587,0,0,1,0-2.024,5.755,5.755,0,0,1,2.747-3.839,6.514,6.514,0,0,1,2.442-.841c.318-.047.646-.066,1-.083a6.035,6.035,0,0,1,2.7.506,5.534,5.534,0,0,1,1.863,1.341,5.075,5.075,0,0,1,1.146,2.069,4.97,4.97,0,0,1,.248,1.429,8.587,8.587,0,0,1-.192,1.48,5.832,5.832,0,0,1-2.4,4.036,4.163,4.163,0,0,1-1.1.506,4,4,0,0,1-1.4.176,2.876,2.876,0,0,1-1.24-.359A2.059,2.059,0,0,1,539.844,9786.424Z"
-                                                transform="translate(-534.749 -9776.012)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/pinterest-p-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://mail.google.com/">
-                                        <svg class="scale-up-br" width="16" height="13.752" viewBox="0 0 16 13.752">
-                                            <path id="google_plus" data-name="google plus"
-                                                d="M576.5,9780.717v2.439h-1v-2.439H573v-1h2.5v-2.439h1v2.439H579v1Zm-6.914-2.471a2.56,2.56,0,0,1,1.407,2.331,2.707,2.707,0,0,1-1.239,2.1c-.681.522-.81.742-.81,1.186,0,.379.729,1.024,1.111,1.29a2.848,2.848,0,0,1,1.444,2.692c0,1.5-1.444,3.169-4.116,3.169-2.344,0-4.383-1.12-4.383-2.617,0-1.521,1.866-2.987,4.209-2.987.255,0,.489-.011.732-.011a1.608,1.608,0,0,1-.574-1.15,1.714,1.714,0,0,1,.214-.785c-.127.009-.257-.012-.391-.012a3.061,3.061,0,0,1-3.214-3.058c0-1.631,1.781-3.132,3.673-3.132h4.22l-.944.982Zm-1.93,7.553c-1.62-.017-3.071.971-3.071,2.156,0,1.209,1.17,2.094,2.79,2.094,2.277,0,3.071-.822,3.071-2.032a1.819,1.819,0,0,0-.052-.428c-.178-.685-.808-1.023-1.688-1.624A3.616,3.616,0,0,0,567.656,9785.8Zm1.82-5.2a2.819,2.819,0,0,0-2.355-2.559c-1.087-.031-1.816,1.041-1.628,2.443a2.821,2.821,0,0,0,2.308,2.6C568.887,9783.108,569.663,9782,569.476,9780.6Z"
-                                                transform="translate(-563 -9777.264)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/google-plus-g-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://www.youtube.com/">
-                                        <svg class="scale-up-br" class="footer__link_youtube" width="15.997"
-                                            height="10.998" viewBox="0 0 15.997 10.998">
-                                            <path id="youtube"
-                                                d="M606.537,9778.522l-5.225,0-5.429,0c-1.358,0-2.883.907-2.883,2.236v6.618c0,1.329,1.525,2.14,2.883,2.14h10.654a2.223,2.223,0,0,0,2.459-2.14v-6.618A2.3,2.3,0,0,0,606.537,9778.522Zm-6.573,8.043-.032-5.04,3.508,2.543Z"
-                                                transform="translate(-593 -9778.519)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/youtube-brands.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://dribbble.com/">
-                                        <svg class="scale-up-br" width="16.001" height="16.001"
-                                            viewBox="0 0 16.001 16.001">
-                                            <path id="dribbble"
-                                                d="M638.838,9782.4a8.02,8.02,0,0,0-4.723-5.761,7.865,7.865,0,0,0-1.5-.466,8.04,8.04,0,0,0-3.222,0,7.872,7.872,0,0,0-1.5.466,8.022,8.022,0,0,0-2.543,1.715,8.014,8.014,0,0,0-2.181,7.268,7.97,7.97,0,0,0,1.2,2.862,7.995,7.995,0,0,0,2.16,2.16,7.994,7.994,0,0,0,8.947,0,8,8,0,0,0,2.16-2.16,7.965,7.965,0,0,0,1.2-2.862,8.052,8.052,0,0,0,0-3.222Zm-1.007,1.543a15.814,15.814,0,0,0-4.759-.225c-.048-.117-.1-.234-.147-.353-.142-.334-.3-.665-.454-.991a8.789,8.789,0,0,0,3.807-2.7A6.8,6.8,0,0,1,637.83,9783.947Zm-2.318-5.06a7.443,7.443,0,0,1-3.569,2.474,34.52,34.52,0,0,0-2.554-3.985,6.818,6.818,0,0,1,6.123,1.512Zm-6.149-1.507h0a.113.113,0,0,1-.02,0Zm-1.279.455a41.039,41.039,0,0,1,2.537,3.937,25.251,25.251,0,0,1-6.308.834A6.84,6.84,0,0,1,628.085,9777.836Zm-3.917,6.179c0-.073,0-.145.006-.216a25.063,25.063,0,0,0,7.014-.973c.2.382.383.771.554,1.16-.09.025-.18.053-.269.082a10.808,10.808,0,0,0-5.557,4.509.008.008,0,0,1,0,0A6.811,6.811,0,0,1,624.168,9784.015Zm6.833,6.833a6.8,6.8,0,0,1-4.352-1.566c.09.073.153.12.153.12a9.254,9.254,0,0,1,5.362-4.269l.045-.014a28.416,28.416,0,0,1,1.46,5.188A6.8,6.8,0,0,1,631,9790.848Zm3.818-1.166a29.507,29.507,0,0,0-1.33-4.88,9.88,9.88,0,0,1,4.258.3A6.835,6.835,0,0,1,634.818,9789.682Z"
-                                                transform="translate(-623 -9776.015)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/basketball-ball-solid.svg" alt="#">
                                     </a>
                                     <a class="footer__link" target="_blank" href="https://www.tumblr.com/">
-                                        <svg class="scale-up-br" width="10.002" height="16.01"
-                                            viewBox="0 0 10.002 16.01">
-                                            <path id="tumblr"
-                                                d="M666.009,9791.146a9.578,9.578,0,0,1-1.849.678,7.808,7.808,0,0,1-1.79.194,4.868,4.868,0,0,1-1.717-.275,4.17,4.17,0,0,1-1.431-.791,2.873,2.873,0,0,1-.823-1.092,4.761,4.761,0,0,1-.229-1.677v-5.614h-2.164V9780.3a5.613,5.613,0,0,0,1.8-.878,4.372,4.372,0,0,0,1.075-1.376,6.2,6.2,0,0,0,.558-2.04H661.7v3.7h3.682v2.856H661.7v4.105a7.018,7.018,0,0,0,.086,1.727,1.474,1.474,0,0,0,.607.691,2.3,2.3,0,0,0,1.208.319,4.34,4.34,0,0,0,2.406-.791Z"
-                                                transform="translate(-656.007 -9776.008)" fill="#95e1d3" />
-                                        </svg>
+                                        <img class="footer__linkImg" src="img/footer/tumblr-brands.svg" alt="#">
                                     </a>
                                 </div>
                             </div>
