--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MoGo</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/intro/icon.ico">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/flexslider.css">
+        <link rel="stylesheet" href="styles/firstStyle.css">
 </head>
 
 <body>
@@ -1000,7 +998,8 @@
                         </div>
                         <p class="mogoBlog__number">542</p>
                         <div class="mogoBlog__socialComents">
-                            <img src="img/blog/comment-dots-regular.svg" alt="" class="mogoBlog__socialImg mogoBlog__socialImg_comment">
+                            <img src="img/blog/comment-dots-regular.svg" alt=""
+                                class="mogoBlog__socialImg mogoBlog__socialImg_comment">
                         </div>
                         <p class="mogoBlog__number">15</p>
                     </div>
@@ -1027,7 +1026,8 @@
                         </div>
                         <p class="mogoBlog__number">992</p>
                         <div class="mogoBlog__socialComents">
-                            <img src="img/blog/comment-dots-regular.svg" alt="" class="mogoBlog__socialImg mogoBlog__socialImg_comment">
+                            <img src="img/blog/comment-dots-regular.svg" alt=""
+                                class="mogoBlog__socialImg mogoBlog__socialImg_comment">
                         </div>
                         <p class="mogoBlog__number">42</p>
                     </div>
@@ -1053,7 +1053,8 @@
                         </div>
                         <p class="mogoBlog__number">1560</p>
                         <div class="mogoBlog__socialComents">
-                            <img src="img/blog/comment-dots-regular.svg" alt="" class="mogoBlog__socialImg mogoBlog__socialImg_comment">
+                            <img src="img/blog/comment-dots-regular.svg" alt=""
+                                class="mogoBlog__socialImg mogoBlog__socialImg_comment">
                         </div>
                         <p class="mogoBlog__number">98</p>
                     </div>
@@ -1216,18 +1217,54 @@
                 <div class="footer__developersBlock">
                     <p>© 2016 MoGo free PSD template by <a class="footer__developersLink" target="_blank"
                             href="https://www.behance.net/laaqiq">Laaqiq</a></p>
-                    <p class="w3c__label">
+                    <!-- <p class="w3c__label">
                         <a href="http://jigsaw.w3.org/css-validator/check/referer">
                             <img style="border:0;width:88px;height:31px"
                                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Правильный CSS!" />
                         </a>
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
     </section>
 
+
+
+
+    <!-- Styles -->
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+    <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="styles/flexslider.css"> -->
+
+
     <!-- Skripts -->
+
+    <script type="text/javascript">
+        /* CSS #1 */
+        var giftofspeed = document.createElement('link');
+        giftofspeed.rel = 'stylesheet';
+        giftofspeed.href = 'styles/style.css';
+        giftofspeed.type = 'text/css';
+        var godefer = document.getElementsByTagName('link')[0];
+        godefer.parentNode.insertBefore(giftofspeed, godefer);
+
+        /* CSS #2 */
+        var giftofspeed = document.createElement('link');
+        giftofspeed.rel = 'stylesheet';
+        giftofspeed.href = 'styles/normalize.css';
+        giftofspeed.type = 'text/css';
+        var godefer = document.getElementsByTagName('link')[0];
+        godefer.parentNode.insertBefore(giftofspeed, godefer);
+
+        /* CSS #3 */
+        var giftofspeed2 = document.createElement('link');
+        giftofspeed2.rel = 'stylesheet';
+        giftofspeed2.href = 'styles/flexslider.css';
+        giftofspeed2.type = 'text/css';
+        var godefer2 = document.getElementsByTagName('link')[0];
+        godefer2.parentNode.insertBefore(giftofspeed2, godefer2);
+    </script>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/jquery.malihu.PageScroll2id.min.js"></script>
     <!-- Подключаем плавных переход по якорям и навигацию -->
@@ -1244,4 +1281,5 @@
 
 
 </body>
+
 </html>
